fix: make sure aside button focus border isn't truncated
The truncation happened on Safari on iPhone 7

--- a/src/scss/Aside.scss
+++ b/src/scss/Aside.scss
@@ -90,7 +90,7 @@
     &.fluid-overlay--overlaid {
       z-index: 1;
       .fluid-box {
-        height: 20rem;
+        height: 20.5rem;
         &:focus {
           outline: none;
         }
